--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,8 @@
-spring:
-  cloud:
-    config:
-      uri: localhost
+info:
+  component: Front of China Server
+
+server:
+  port: 8820
+endpoints:
+  restart:
+    enabled: true
